# mcp2026

./: .env.template  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
basico/: mini_mcp.py
github_login/: app.py
seguro/: inspector_cloud.py  secure_mcp.py  weather_client.py
