[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "mcppython"
version = "0.1.0"
description = "Servidor MCP de clima usando Open-Meteo, con presentación interactiva sobre uv, pipx y MCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi",
    "langchain>=1.3.10",
    "mcp[cli]>=1.28.0",
]

[project.scripts]
mini-mcp = "mini_mcp:main"
weather-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "mini_mcp"]
